--- a/src/lang/zh-CN.lang
+++ b/src/lang/zh-CN.lang
@@ -50,6 +50,11 @@ msg.version.downloading=\u6B63\u5728\u83B7\u53D6\u7248\u672C\u4FE1\u606F\u2026\u
 msg.version.failed=\u83B7\u53D6\u7248\u672C\u4FE1\u606F\u5931\u8D25
 msg.version.succeeded=\u83B7\u53D6\u7248\u672C\u4FE1\u606F\u6210\u529F
 
+msg.profile.cannotremovedefault=\u4e0d\u80fd\u5220\u9664\u9ed8\u8ba4\u914d\u7f6e
+msg.profile.removeconfirm=\u662f\u5426\u8981\u5220\u9664\u5f53\u524d\u914d\u7f6e\uff1f
+msg.profile.exists=\u6b64\u914d\u7f6e\u5df2\u5b58\u5728
+msg.profile.inputname=\u8f93\u5165\u65b0\u914d\u7f6e\u7684\u540d\u79f0\uff1a
+
 msg.gamepath.error=\u65E0\u6CD5\u4F7F\u7528.minecraft\u76EE\u5F55\uFF01
 msg.help=\u0020- \u65B0\u7248\u542F\u52A8\u5668\n - \u652F\u6301mod\u6CE8\u5165\n - \u652F\u6301\u4E0D\u540C\u7248\u672Cminecraft\u8FD0\u884C\n - \u652F\u6301\u9700\u8981json\u8BFB\u53D6\u7684\u7248\u672C\n\u5982\u679C\u6709bug\u8BF7\u8054\u7CFBfakechaos@sina.com
 msg.jrepath.error=\u65E0\u6CD5\u542F\u52A8java\uFF0C\u8BF7\u68C0\u67E5jre\u8DEF\u5F84
@@ -80,9 +85,17 @@ ui.table.name=\u540D\u79F0
 ui.table.state=\u72B6\u6001
 ui.table.type=\u7C7B\u578B
 
-ui.filechooser.title=\u9009\u62E9jre\u76EE\u5F55
-ui.update.title=\u6b63\u5728\u66f4\u65b0...
 ui.jrepath.label=JRE\u8DEF\u5F84\uFF08\u7F6E\u7A7A\u4E3A\u4F7F\u7528\u9ED8\u8BA4\uFF09
+ui.jrepath.filechooser.title=\u9009\u62E9jre\u76EE\u5F55
+
+ui.profile.label=\u767b\u5f55\u914d\u7f6e\uff1a
+ui.profile.add=\u589e\u52a0\u914d\u7f6e
+ui.profile.remove=\u5220\u9664\u914d\u7f6e
+
+ui.runpath.label=\u5de5\u4f5c\u8def\u5f84\uff08\u50a8\u5b58\u5b58\u6863\uff0c\u8bbe\u7f6e\u7b49\uff09
+ui.runpath.filechooser.title=\u9009\u62e9\u5de5\u4f5c\u8def\u5f84
+
+ui.update.title=\u6b63\u5728\u66f4\u65b0...
 ui.launch=\u8FDB\u5165\u6E38\u620F
 ui.memory.label=\u4F7F\u7528\u5185\u5B58\u5927\u5C0F(MB)\uFF1A
 ui.offline=\u79BB\u7EBF\u6E38\u620F
