--- a/src/lang/zh-CN.lang
+++ b/src/lang/zh-CN.lang
@@ -1,114 +1,118 @@
 
-msg.auth.connecting1=\u6B63\u5728\u8FDE\u63A5
-msg.auth.connecting2=\u68C0\u67E5\u7528\u6237\u540D\u548C\u5BC6\u7801
-msg.auth.failed=\u767B\u5F55\u5931\u8D25
-msg.auth.succeeded=\u767b\u5f55\u6210\u529f
-msg.auth.noselection=\u8bf7\u9009\u62e9\u767b\u5f55\u65b9\u5f0f
-msg.auth.minelogin.failed.0=\u4f7f\u7528MineLogin\u65f6\u51fa\u73b0\u7f51\u7edc\u95ee\u9898
-msg.auth.minelogin.failed.1=MineLogin\u7528\u6237\u540d\u6216\u5bc6\u7801\u4e0d\u5408\u6cd5
-msg.auth.minelogin.failed.2=\u4f7f\u7528MineLogin\u65f6\u51fa\u73b0\u5185\u90e8\u9519\u8bef
-msg.auth.minelogin.failed.3=MineLogin\u7528\u6237\u4e0d\u5b58\u5728\uff0c\u8bf7\u6ce8\u518c
-msg.auth.minelogin.failed.4=MineLogin\u9700\u8981\u9a8c\u8bc1
-msg.auth.minelogin.failed.5=MineLogin\u5bc6\u7801\u9519\u8bef
-msg.auth.skinme.donthavechar=\u4f60\u7684\u8d26\u53f7\u4e2d\u6ca1\u6709\u8fd9\u4e2a\u89d2\u8272
-msg.auth.skinme.selectone1=\u4f60\u7684\u8d26\u53f7\u4e2d\u6709\u591a\u4e2a\u89d2\u8272\uff1a
-msg.auth.skinme.selectone2=\u3002\u8bf7\u4f7f\u7528\u201c\u89d2\u8272\u540d:\u8d26\u53f7\u201d\u7684\u683c\u5f0f\u767b\u5f55\u3002
+encoding=gbk
 
-msg.download.failed=\u4E0B\u8F7D\u5931\u8D25\uFF1A
-msg.download.start=\u5F00\u59CB\u4E0B\u8F7D\uFF1A
-msg.download.succeeded=\u4E0B\u8F7D\u6210\u529F\uFF1A
+msg.auth.connecting1=正在连接
+msg.auth.connecting2=检查用户名和密码
+msg.auth.failed=登录失败
+msg.auth.succeeded=登录成功
+msg.auth.noselection=请选择登录方式
+msg.auth.minelogin.failed.0=使用MineLogin时出现网络问题
+msg.auth.minelogin.failed.1=MineLogin用户名或密码不合法
+msg.auth.minelogin.failed.2=使用MineLogin时出现内部错误
+msg.auth.minelogin.failed.3=MineLogin用户不存在，请注册
+msg.auth.minelogin.failed.4=MineLogin需要验证
+msg.auth.minelogin.failed.5=MineLogin密码错误
+msg.auth.skinme.donthavechar=你的账号中没有这个角色
+msg.auth.skinme.selectone1=你的账号中有多个角色：
+msg.auth.skinme.selectone2=。请使用“角色名:账号”的格式登录。
 
-msg.game.basicrequire=\u9700\u8981\u8D44\u6E90\u548C\u81F3\u5C11\u4E00\u4E2A\u6E38\u620F\u7248\u672C\u624D\u80FD\u5F00\u59CB\u6E38\u620F
-msg.game.nousername=\u8BF7\u8F93\u5165\u7528\u6237\u540D
-msg.game.isloggingin=\u6b63\u5728\u5c1d\u8bd5\u767b\u5f55
+msg.download.failed=下载失败：
+msg.download.start=开始下载：
+msg.download.succeeded=下载成功：
 
-msg.mod.alreadyloaded=\u6B64mod\u5DF2\u88AB\u4F7F\u7528
-msg.mod.conflict=\u6B64mod\u548C\u5DF2\u4F7F\u7528mod\u6709\u51B2\u7A81
-msg.mod.required.error=\u8fd9\u79cd\u767b\u5f55\u65b9\u5f0f\u4e0d\u652f\u6301\u8fd9\u4e2a\u7248\u672c
-msg.mod.required.conflict=\u672c\u767b\u5f55\u65b9\u5f0f\u4f7f\u7528\u4e86\u7279\u522b\u7684\mod\uff0c\u548c\u5f53\u524d\u4f7f\u7528\u7684mod\u6709\u51b2\u7a81\u3002\u8bf7\u66f4\u6362\u767b\u5f55\u65b9\u5f0f\uff0c\u6216\u8005\u53d6\u6d88\u8fd9\u4e9b\u6709\u51b2\u7a81\u7684mod
-msg.mod.noselection=\u8BF7\u9009\u62E9\u4E00\u4E2Amod
+msg.game.basicrequire=需要资源和至少一个游戏版本才能开始游戏
+msg.game.nousername=请输入用户名
+msg.game.isloggingin=正在尝试登录
 
-msg.module.alreadyinstalled=\u6B64\u7EC4\u4EF6\u5DF2\u88AB\u5B89\u88C5
-msg.module.failed=\u5B89\u88C5\u5931\u8D25
-msg.module.isinstalling=\u6B63\u5728\u5B89\u88C5\u8FD9\u4E2A\u7EC4\u4EF6
-msg.module.isuninstalling=\u6b63\u5728\u5378\u8f7d\u8fd9\u4e2a\u7ec4\u4ef6
-msg.module.noselection=\u8BF7\u9009\u62E9\u4E00\u4E2A\u7EC4\u4EF6
-msg.module.notallowed=\u65E0\u6CD5\u5728\u5F53\u524D\u64CD\u4F5C\u7CFB\u7EDF\u8FD0\u884C\u8BE5\u7248\u672Cminecraft
-msg.module.reason=\u5B98\u65B9\u89E3\u91CA\uFF1A
-msg.module.start=\u5F00\u59CB\u5B89\u88C5\u7EC4\u4EF6
-msg.module.startuninstall=\u5f00\u59cb\u5378\u8f7d\u7ec4\u4ef6
-msg.module.succeeded=\u5B89\u88C5\u7EC4\u4EF6\u5B8C\u6210
-msg.module.uninstallsucceeded=\u5378\u8f7d\u7ec4\u4ef6\u5b8c\u6210
-msg.module.delete=\u6b63\u5728\u5220\u9664
-msg.module.notinstalled=\u6b64\u7ec4\u4ef6\u6ca1\u6709\u88ab\u5b89\u88c5
+msg.mod.alreadyloaded=此mod已被使用
+msg.mod.conflict=此mod和已使用mod有冲突
+msg.mod.required.error=这种登录方式不支持这个版本
+msg.mod.required.conflict=本登录方式使用了特别的mod，和当前使用的mod有冲突。请更换登录方式，或者取消这些有冲突的mod
+msg.mod.noselection=请选择一个mod
 
-msg.update.request=\u68c0\u6d4b\u5230\u65b0\u7248\u672c\u7684SSAST Launcher\uff0c\u662f\u5426\u8981\u66f4\u65b0\uff1f
-msg.update.exception1=\u51fa\u73b0\u5f02\u5e38\uff1a
-msg.update.exception2=\uff0c\u65e0\u6cd5\u5b8c\u6210\u66f4\u65b0
+msg.module.alreadyinstalled=此组件已被安装
+msg.module.failed=安装失败
+msg.module.isinstalling=正在安装这个组件
+msg.module.isuninstalling=正在卸载这个组件
+msg.module.noselection=请选择一个组件
+msg.module.notallowed=无法在当前操作系统运行该版本minecraft
+msg.module.reason=官方解释：
+msg.module.start=开始安装组件
+msg.module.startuninstall=开始卸载组件
+msg.module.succeeded=安装组件完成
+msg.module.uninstallsucceeded=卸载组件完成
+msg.module.delete=正在删除
+msg.module.notinstalled=此组件没有被安装
 
-msg.version.downloading=\u6B63\u5728\u83B7\u53D6\u7248\u672C\u4FE1\u606F\u2026\u2026
-msg.version.failed=\u83B7\u53D6\u7248\u672C\u4FE1\u606F\u5931\u8D25
-msg.version.succeeded=\u83B7\u53D6\u7248\u672C\u4FE1\u606F\u6210\u529F
+msg.update.request=检测到新版本的SSAST Launcher，是否要更新？
+msg.update.exception1=出现异常：
+msg.update.exception2=，无法完成更新
 
-msg.profile.cannotremovedefault=\u4e0d\u80fd\u5220\u9664\u9ed8\u8ba4\u914d\u7f6e
-msg.profile.removeconfirm=\u662f\u5426\u8981\u5220\u9664\u5f53\u524d\u914d\u7f6e\uff1f
-msg.profile.exists=\u6b64\u914d\u7f6e\u5df2\u5b58\u5728
-msg.profile.inputname=\u8f93\u5165\u65b0\u914d\u7f6e\u7684\u540d\u79f0\uff1a
+msg.version.downloading=正在获取版本信息……
+msg.version.failed=获取版本信息失败
+msg.version.succeeded=获取版本信息成功
 
-msg.gamepath.error=\u65E0\u6CD5\u4F7F\u7528.minecraft\u76EE\u5F55\uFF01
-msg.help=\u0020- \u65B0\u7248\u542F\u52A8\u5668\n - \u652F\u6301mod\u6CE8\u5165\n - \u652F\u6301\u4E0D\u540C\u7248\u672Cminecraft\u8FD0\u884C\n - \u652F\u6301\u9700\u8981json\u8BFB\u53D6\u7684\u7248\u672C\n\u5982\u679C\u6709bug\u8BF7\u8054\u7CFBfakechaos@sina.com
-msg.jrepath.error=\u65E0\u6CD5\u542F\u52A8java\uFF0C\u8BF7\u68C0\u67E5jre\u8DEF\u5F84
-msg.zip.unzip=\u89E3\u538B
-msg.comingsoon=\u6682\u672a\u5f00\u653e\u6b64\u529f\u80fd
+msg.profile.cannotremovedefault=不能删除默认配置
+msg.profile.removeconfirm=是否要删除当前配置？
+msg.profile.exists=此配置已存在
+msg.profile.inputname=输入新配置的名称：
 
-ui.crash.default=\u627E\u4E0D\u5230\u5D29\u6E83\u62A5\u544A\u6587\u4EF6\uFF0C\u63A7\u5236\u53F0\u8F93\u51FA\uFF1A\n
-ui.crash.title=Minecraft\u8FD0\u884C\u65F6\u51FA\u9519
+msg.gamepath.error=无法使用.minecraft目录！
+msg.help= - 新版启动器\u000a - 支持mod注入\u000a - 支持不同版本minecraft运行\u000a - 支持需要json读取的版本\u000a如果有bug请联系fakechaos@sina.com
+msg.jrepath.error=无法启动java，请检查jre路径
+msg.zip.unzip=解压
+msg.comingsoon=暂未开放此功能
+msg.assets.cannotload=无法复制资源文件
+msg.run.unknownparam1=运行时错误，不存在参数“
+msg.run.unknownparam2=”
 
-ui.mod.label=\u7F6E\u5165\u5F0Fmod\uFF08forge\uFF0Cmodloader\u7B49\uFF09\uFF1A
-ui.mod.load=\u4F7F\u7528mod
-ui.mod.loaded=\u5DF2\u4F7F\u7528
+ui.crash.default=找不到崩溃报告文件，控制台输出：\u000a
+ui.crash.title=Minecraft运行时出错
+
+ui.mod.label=置入式mod（forge，modloader等）：
+ui.mod.load=使用mod
+ui.mod.loaded=已使用
 ui.mod.notloaded=
-ui.mod.unload=\u53D6\u6D88mod
+ui.mod.unload=取消mod
 
-ui.mode.d32=32\u4F4D
-ui.mode.d64=64\u4F4D
-ui.mode.default=\u9ED8\u8BA4
+ui.mode.d32=32位
+ui.mode.d64=64位
+ui.mode.default=默认
 
-ui.module.install=\u5B89\u88C5\u7EC4\u4EF6
-ui.module.installed=\u5DF2\u5B89\u88C5
-ui.module.label=\u7248\u672c\uFF1A
+ui.module.install=安装组件
+ui.module.installed=已安装
+ui.module.label=版本：
 ui.module.notinstalled=
-ui.module.uninstall=\u5378\u8F7D\u7EC4\u4EF6
-ui.module.notfinished=\u672a\u5b8c\u6210\u5b89\u88c5
+ui.module.uninstall=卸载组件
+ui.module.notfinished=未完成安装
 
-ui.table.name=\u540D\u79F0
-ui.table.state=\u72B6\u6001
-ui.table.type=\u7C7B\u578B
+ui.table.name=名称
+ui.table.state=状态
+ui.table.type=类型
 
-ui.jrepath.label=JRE\u8DEF\u5F84\uFF08\u7F6E\u7A7A\u4E3A\u4F7F\u7528\u9ED8\u8BA4\uFF09
-ui.jrepath.filechooser.title=\u9009\u62E9jre\u76EE\u5F55
+ui.jrepath.label=JRE路径（置空为使用默认）
+ui.jrepath.filechooser.title=选择jre目录
 
-ui.profile.label=\u767b\u5f55\u914d\u7f6e\uff1a
-ui.profile.add=\u589e\u52a0\u914d\u7f6e
-ui.profile.remove=\u5220\u9664\u914d\u7f6e
+ui.profile.label=登录配置：
+ui.profile.add=增加配置
+ui.profile.remove=删除配置
 
-ui.runpath.label=\u5de5\u4f5c\u8def\u5f84\uff08\u50a8\u5b58\u5b58\u6863\uff0c\u8bbe\u7f6e\u7b49\uff09
-ui.runpath.filechooser.title=\u9009\u62e9\u5de5\u4f5c\u8def\u5f84
+ui.runpath.label=工作路径（储存存档，设置等）
+ui.runpath.filechooser.title=选择工作路径
 
-ui.update.title=\u6b63\u5728\u66f4\u65b0...
-ui.launch=\u8FDB\u5165\u6E38\u620F
-ui.memory.label=\u4F7F\u7528\u5185\u5B58\u5927\u5C0F(MB)\uFF1A
-ui.offline=\u79BB\u7EBF\u6E38\u620F
-ui.ok=\u786E\u5B9A
-ui.cancel=\u53d6\u6d88
-ui.password.label=\u5BC6\u7801\uFF1A
-ui.savepassword=\u4FDD\u5B58\u5BC6\u7801
-ui.username.label=\u7528\u6237\u540D\uFF1A
-ui.version.label=\u6E38\u620F\u7248\u672C
+ui.update.title=正在更新...
+ui.launch=进入游戏
+ui.memory.label=使用内存大小(MB)：
+ui.offline=离线游戏
+ui.ok=确定
+ui.cancel=取消
+ui.password.label=密码：
+ui.savepassword=保存密码
+ui.username.label=用户名：
+ui.version.label=游戏版本
 
-ui.auth.type.label=\u767b\u5f55\u65b9\u5f0f
-ui.auth.type.ssast=SSAST\u670d\u52a1\u5668
-ui.auth.type.offline=\u79bb\u7ebf\u6a21\u5f0f
-ui.auth.type.minecraft=\u6b63\u7248
+ui.auth.type.label=登录方式
+ui.auth.type.ssast=SSAST服务器
+ui.auth.type.offline=离线模式
+ui.auth.type.minecraft=正版
 ui.auth.type.minelogin=MineLogin
-
