隐藏显示早期版本和快照版本

--- a/src/lang/en.lang
+++ b/src/lang/en.lang
@@ -78,6 +78,8 @@ ui.module.label=Versions:
 ui.module.notinstalled=
 ui.module.uninstall=Uninstall
 ui.module.notfinished=Half Installed
+ui.module.old=Old Versions
+ui.module.snapshot=Snapshots
 
 ui.table.name=Name
 ui.table.state=State
