--- a/src/lang/zh-CN.lang
+++ b/src/lang/zh-CN.lang
@@ -63,6 +63,7 @@ msg.comingsoon=暂未开放此功能
 msg.assets.cannotload=无法复制资源文件
 msg.run.unknownparam1=运行时错误，不存在参数“
 msg.run.unknownparam2=”
+msg.twitch.inputname=请输入你想要的角色名：
 
 ui.crash.default=找不到崩溃报告文件，控制台输出：\u000a
 ui.crash.title=Minecraft运行时出错
@@ -121,3 +122,4 @@ ui.auth.type.offline=离线模式
 ui.auth.type.minecraft=正版（旧）
 ui.auth.type.minelogin=MineLogin
 ui.auth.type.yggdrasil=正版
+ui.auth.type.twitch=Twitch
