--- a/src/lang/en.lang
+++ b/src/lang/en.lang
@@ -31,7 +31,8 @@ msg.module.start=Start installation
 msg.module.startuninstall=Start uninstallation
 msg.module.succeeded=Installation finished
 msg.module.uninstallsucceeded=Uninstallation finished
-msg.module.delete=Deleting 
+msg.module.delete=Deleting
+msg.module.notinstalled=The module is not installed.
 
 msg.update.request=New version SSAST Launcher is available. Do you want to update?
 msg.update.exception1=Exception occurs: 
@@ -43,9 +44,11 @@ msg.version.succeeded=Version info has been updated.
 
 msg.profile.cannotremovedefault=Cannot remove default profile.
 msg.profile.removeconfirm=Are you sure you want to remove this profile?
+msg.profile.exists=Profile with this name has existed.
+msg.profile.inputname=Please input a profile name:
 
 msg.gamepath.error=Unable to use '.minecraft' directory.
-msg.help=Bug reporte: herbix@163.com.
+msg.help=Bug report: herbix@163.com.
 msg.jrepath.error=Unable to run java from specified jre path.
 msg.zip.unzip=Unzipping 
 msg.comingsoon=Cannot do this now.
