--- a/src/lang/zh.lang
+++ b/src/lang/zh.lang
@@ -49,6 +49,9 @@ msg.profile.removeconfirm=是否要删除当前配置？
 msg.profile.exists=此配置已存在
 msg.profile.inputname=输入新配置的名称：
 
+msg.main.error=出现错误：\u000A
+msg.main.error.title=错误
+
 msg.gamepath.error=无法使用.minecraft目录！
 msg.help=如果有bug请联系herbix@163.com
 msg.jrepath.error=无法启动java，请检查jre路径
