--- a/src/lang/zh-TW.lang
+++ b/src/lang/zh-TW.lang
@@ -40,9 +40,9 @@ msg.update.request=檢測到新版本的SSAST Launcher，是否要更新？
 msg.update.exception1=出現異常：
 msg.update.exception2=，無法完成更新
 
-msg.version.downloading=正在獲取版本資訊……
-msg.version.failed=獲取版本資訊失敗
-msg.version.succeeded=獲取版本資訊成功
+msg.version.downloading=正在獲取版本信息……
+msg.version.failed=獲取版本信息失敗
+msg.version.succeeded=獲取版本信息成功
 
 msg.profile.cannotremovedefault=不能刪除預設配置
 msg.profile.removeconfirm=是否要刪除當前配置？
@@ -60,6 +60,7 @@ msg.assets.cannotload=無法複製資源檔
 msg.run.unknownparam1=執行階段錯誤，不存在參數“
 msg.run.unknownparam2=”
 msg.twitch.inputname=請輸入你想要的角色名：
+msg.yggdrasil.saved=無法連接到登入伺服器，是否要使用本地保存的連接信息？
 
 ui.mode.default=默認
 
