--- a/src/lang/en.lang
+++ b/src/lang/en.lang
@@ -60,6 +60,7 @@ msg.run.unknownparam1=There is no param "
 msg.run.unknownparam2=".
 msg.twitch.inputname=Please input your player name:
 msg.yggdrasil.saved=Cannot connect to login server. Would you like to use local authentication data as your login sessions?
+msg.run.failed=Launching failed. Please read last.log for more information.
 
 ui.mode.d32=-d32
 ui.mode.d64=-d64
