--- a/src/lang/zh-TW.lang
+++ b/src/lang/zh-TW.lang
@@ -102,3 +102,11 @@ ui.auth.type.label=登入方式
 ui.auth.type.ssast=SSAST伺服器
 ui.auth.type.offline=離線模式
 ui.auth.type.minecraft=正版（舊）
+
+ui.tab.profile=登入管理
+ui.tab.module=組件管理
+ui.tab.system=系統設置
+
+ui.proxy.type.label=代理類型：
+ui.proxy.hostport.label=代理伺服器地址（主機名:端口）
+ui.proxy.enable.label=啟用代理
