代理会被使用到游戏里

--- a/src/lang/en.lang
+++ b/src/lang/en.lang
@@ -62,6 +62,7 @@ msg.twitch.inputname=Please input your player name:
 msg.yggdrasil.saved=Cannot connect to login server. Would you like to use local authentication data as your login sessions?
 msg.run.failed=Launching failed. Please read last.log for more information.
 msg.useproxy=Using proxy:
+msg.proxy.notsocks=Minecraft only supports Socks proxy. Direct link is used instead.
 
 ui.mode.d32=-d32
 ui.mode.d64=-d64
