--- a/src/lang/zh-TW.lang
+++ b/src/lang/zh-TW.lang
@@ -63,6 +63,7 @@ msg.twitch.inputname=請輸入你想要的角色名：
 msg.yggdrasil.saved=無法連接到登入伺服器，是否要使用本地保存的連接信息？
 msg.run.failed=啟動失敗。查閱last.log以了解可能的原因。
 msg.useproxy=使用代理：
+msg.proxy.notsocks=Minecraft僅支持Socks類型的代理。遊戲中將使用直接連接。
 
 ui.mode.default=默認
 
