--- a/src/lang/zh.lang
+++ b/src/lang/zh.lang
@@ -64,6 +64,7 @@ msg.twitch.inputname=请输入你想要的角色名：
 msg.yggdrasil.saved=无法连接到登录服务器，是否要使用本地保存的连接信息？
 msg.run.failed=启动失败。阅读last.log来了解可能的原因。
 msg.useproxy=使用代理：
+msg.proxy.notsocks=Minecraft只支持Socks类型的代理。游戏中将使用直接连接。
 
 ui.mode.d32=32位
 ui.mode.d64=64位
